package com.montfel.presentation.util

object TestTags {
    const val FAB = "fab"
    const val EDIT_BUTTON = "edit_button"
    const val DELETE_BUTTON = "delete_button"
    const val TITLE_TEXT_FIELD = "title_text_field"
    const val DESCRIPTION_TEXT_FIELD = "description_text_field"
    const val DUE_DATE_TEXT_FIELD = "due_date_text_field"
}