<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Criar nota</string>
    <string name="edit_note">Editar nota</string>
    <string name="save_note">Salvar nota</string>
    <string name="title">Título*</string>
    <string name="title_error_message">Preencha o título da nota</string>
    <string name="description">Descrição</string>
    <string name="due_date">Data de vencimento*</string>
    <string name="due_date_error_message">Preencha uma data de vencimento igual ou posterior a hoje</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
</resources>